# jacques

./: .gitignore  README.md  demo.ipynb  environment.yml  pyproject.toml  setup.py
.ipynb_checkpoints/: demo-checkpoint.ipynb
docs/: demo.ipynb  demo2.ipynb
jacques/: featurize.py  jacques.py  kcqe.py  kernels.py
jacques.egg-info/: PKG-INFO  SOURCES.txt
requirements/: requirements-dev.txt  requirements-doc.txt  requirements.txt
src/jacques/: data_processing.py  jacques.py  kcqe.py  kernels.py
test/: test_gaussian_kernel.py  test_kernel_smooth_quantile_fn.py
tests/jacques/data_processing/: test_assign_blocks.py  test_differencing.py  test_diffs.py
tests/jacques/kernels/: test_gaussian_kernel.py  test_helper_functions.py  test_kernel_smooth_quantile_fn.py
