[project]
name = "jacques"
version = "0.1.0"
description = "Just Another Conditional Quantile Estimator for disease forecasting"
authors = [
    {name = "Evan L. Ray", email = "elray@umass.edu"}
]

requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "pandas",
    "numpy",
    "tensorflow",
    "tensorflow-probability",
    "pytest",
    "tf-keras",
    "polars",
]

[project.optional-dependencies]
dev = [
    'mypy',
    'pytest',
    'pytest-mock',
    'ruff',
]


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
lint.extend-select = ['I']

[tools.setuptools]
packages = ['jacques']
